--- a/MyBookList/Content/Site.css
+++ b/MyBookList/Content/Site.css
@@ -22,3 +22,15 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.validation-summary-errors {
+    color: #ff0000;
+}
+
+.input-validation-error {
+    border: 2px solid #ff0000;
+}
+
+.gray-button {
+    color: darkgray;
+}
