Rating rework and details fix

--- a/MyBookList/Views/Games/Index.cshtml
+++ b/MyBookList/Views/Games/Index.cshtml
@@ -22,7 +22,7 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td><img id="image" src='@Url.Action("ShowMini", "Image", new { id = item.ImageId})' height="100" width="70" /></td>
+                <td style="width:80px;text-align:center"><img id="image" src='@Url.Action("ShowMini", "Image", new { id = item.ImageId})' height="100" width="70" /></td>
                 <th>@Html.ActionLink(item.Title, "Details", "Games", new { id = item.Id }, null)</th>
                 <td>@item.AverageScore</td>
                 <th>@item.Studio</th>
