--- a/MyBookList/Views/Games/_RecommendGame.cshtml
+++ b/MyBookList/Views/Games/_RecommendGame.cshtml
@@ -4,11 +4,11 @@
 {
     @Html.ValidationSummary()
     <div class="form-group">
-        @Html.TextBox("userName", null, new { @class = "form -control" })
+        @Html.TextBox("userName", null, new { @class = "form-control" })
     </div>
 
     @Html.Hidden("id", new { id = Model.Id });
     @Html.Hidden("type", "Game");
 
-    <button type="submit" class="btn btn-primary">Send</button>
+    <button type="submit" class="button-for-modal">Send</button>
 }
