--- a/MyBookList/Views/Books/_RecommendBook.cshtml
+++ b/MyBookList/Views/Books/_RecommendBook.cshtml
@@ -1,13 +1,12 @@
-﻿
-@using (Html.BeginForm("Recommend", "UserProfile"))
+﻿@using (Html.BeginForm("Recommend", "UserProfile"))
 {
     @Html.ValidationSummary()
     <div class="form-group">
-        @Html.TextBox("userName", null, new { @class = "form -control" })
+        @Html.TextBox("userName", null, new { @class = "form-control" })
     </div>
 
     @Html.Hidden("id", new { id = Model.Id });
     @Html.Hidden("type", "Book");
 
-    <button type="submit" class="btn btn-primary">Send</button>
+    <button type="submit" class="button-for-modal">Send</button>
 }
