--- a/MyBookList/Views/UserProfile/_SendTicket.cshtml
+++ b/MyBookList/Views/UserProfile/_SendTicket.cshtml
@@ -15,7 +15,7 @@
     </div>
 
     <div style="text-align:right;">
-        <button type="submit" id="accountprofileedit-submit" name="accountprofileedit-submit" value="Edit Account" class="btn btn-primary" style="margin-left:5px;">Send Ticket</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+        <button type="submit" id="accountprofileedit-submit" name="accountprofileedit-submit" value="Edit Account" class="button-for-modal" style="margin-left:5px;">Send</button>
+        <button type="button" class="button-for-modal" data-dismiss="modal">Cancel</button>
     </div>
 }
